--- a/job_vgg16/config_vgg16_technical.json
+++ b/job_vgg16/config_vgg16_technical.json
@@ -2,14 +2,14 @@
   "train_env": "TID2013",
   "s3_bucket": "ds-hotel-image-assessment",
   "docker_image": "idealo/nima-gpu",
-  "base_model_name": "MobileNet",
+  "base_model_name": "VGG16",
   "existing_weights": null,
   "n_classes": 10,
   "batch_size": 64,
   "epochs_train_dense": 25,
   "learning_rate_dense": 0.001,
   "decay_dense": 0,
-  "epochs_train_all": 25,
+  "epochs_train_all": 500,
   "learning_rate_all": 0.0000003,
   "decay_all": 0,
   "dropout_rate": 0.75,
